Bug Fix for Firefox: GUI is clipped

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -4,7 +4,7 @@
 @import '~bourbon-bitters/app/assets/stylesheets/_buttons';
 @import '../../scss/variables';
 
-:host { width: 100%; display: block; }
+:host { width: 100%; height: 100%; overflow: auto; display: block; }
 
 /* Main View Styles */
 #index { color: #fff; }
@@ -181,7 +181,6 @@
 
     .right {
       float: left;
-      width: 270px;
 
       .row {
         overflow: auto;
